--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -12,7 +12,7 @@ block content
         section.welcome
             .welcome-block
                 .welcome-block_content
-                    .welcome-block__avatar(style='background-image: url(../images/content/avatar.jpg)')
+                    .welcome-block__avatar(style='background-image: url(images/content/avatar.jpg)')
                     .welcome-block__info
                         h1.welcome-block__name Poymenov Konstantin
                         h2.welcome-block__text Личный сайт веб разработчика
@@ -21,7 +21,7 @@ block content
                             each social in ['vk', 'github', 'in']
                                 li.social__item
                                     a(class=`social__link social__link_${social}` href='#')
-                                        img.social__img(src=`../images/icons/${social}.svg` alt='' style='fill: #000')
+                                        img.social__img(src=`images/icons/${social}.svg` alt='' style='fill: #000')
                 .nav
                     ul.nav__list
                         li.nav__item
