--- a/src/template/pages/blog.pug
+++ b/src/template/pages/blog.pug
@@ -31,6 +31,8 @@ block content
                 .user__desc
                     .user__page Блог
                     .user__text Статьи, которые я написал
+                .hero-star
+                    img.hero-star__img(src="images/bg/stars1.svg")
     section.blog
         .double-triagle
             svg.double-triagle__svg(width='100%' height='100%')
