--- a/src/styles/layout/adjustment.scss
+++ b/src/styles/layout/adjustment.scss
@@ -9,6 +9,10 @@ section {
   width: 100%;
   min-height: 628px;
   position: relative;
+  .hero__scroll-button {
+    position: absolute;
+    bottom: 5%;
+  }
   &.section--small {
     min-height: rem(500px);
     height: 50%;
@@ -19,7 +23,7 @@ section {
       top: 40%;
     }
     .hero__scroll-button {
-      bottom: 30%;
+      bottom: 15%;
     }
   }
 }
