--- a/src/styles/section/about.scss
+++ b/src/styles/section/about.scss
@@ -77,7 +77,7 @@
 }
 
 .user {
-  width: rem(380px);
+  width: rem(420px);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -91,6 +91,7 @@
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  padding:rem(30px);
 }
 
 .user__img {
@@ -100,6 +101,7 @@
   display: block;
   position: relative;
   overflow: hidden;
+  z-index: 10;
 }
 
 .user__avatar {
@@ -108,6 +110,7 @@
 
 .user__desc {
   text-align: center;
+  z-index: 10;
 }
 
 .user__name {
@@ -117,6 +120,7 @@
   font-weight: 500;
   @include font-size(35px);
   margin-bottom: 10px;
+  z-index: 10;
 }
 
 .user__text {
@@ -127,34 +131,37 @@
   line-height: 1.2;
 }
 
-.hero__scroll-button {
+.hero-star {
   position: absolute;
-  bottom: 15%;
+  top:0;
+  width:100%;
+  height:100%;
+  z-index: 1;
+}
+
+.hero-star__img {
+  width:100%;
+  opacity: .1;
+}
+
+.title-star {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  z-index: 1;
+  width: 100%;
+}
+
+.title-star__svg {
+  opacity: .3;
+  height:100%;
+  width: 100%;
 }
 
 .arrow__down {
   width: 100%;
 }
-
-//.arrow-down__link {
-//  position: absolute;
-//  right:calc(50% - 11px);
-//  width: rem(26px);
-//  height: rem(17px);
-//  transition: all 0.3s;
-//  opacity: .7;
-//  z-index: 10;
-//  &:hover {
-//    transform: scale(1.2);
-//    transition: all 0.3s;
-//    opacity: 1;
-//  }
-//}
-//
-//.arrow-down__svg {
-//  fill: #ffffff;
-//  width: 100%;
-//}
 
 .about {
   width: 100%;
@@ -189,6 +196,8 @@
 .about__left_title {
   margin-bottom: rem(30px);
   position: relative;
+  display: flex;
+  justify-content: center;
 }
 
 .svg__stars {
