--- a/src/template/pages/work.pug
+++ b/src/template/pages/work.pug
@@ -30,14 +30,17 @@ block content
                     .user__desc
                         .user__name Poymenov Konstantin
                         .user__text Личный сайт разработчика
-
-
+                    .hero-star
+                        img.hero-star__img(src="images/bg/stars1.svg")
             .arrow.hero__scroll-button.arrow__down
                 a.arrow__link
                     svg.arrow__svg(width='26' height='17')
                         use(xlink:href=`images/icons/sprite.svg#arrow_down`)
             .hero__substrate
                 .main__title Мои работы
+                    .title-star
+                        svg.title-star__svg(width='100' height='100')
+                            use(xlink:href=`images/icons/sprite.svg#stars2`)
                 svg.hero__substrate_svg(width='100%' height='100%' preserveAspectRatio="none")
                     use(xlink:href=`images/icons/sprite.svg#bg`)
         section.work
@@ -62,6 +65,9 @@ block content
         section.feedback
             .wrapper-block
                 .main__title Что обо мне говорят
+                    .title-star
+                        svg.title-star__svg(width='100' height='100')
+                            use(xlink:href=`images/icons/sprite.svg#stars3`)
                 .feed-block
                     .feed-block__item
                         .feed-block__avatar
