--- a/src/template/pages/work.pug
+++ b/src/template/pages/work.pug
@@ -18,7 +18,7 @@ block content
                         each social in socials
                             li.social__item
                                 a(class=`social__link social__link_${social[0]}` href=`${social[1]}`)
-                                    svg.social__link_svg(width='22' height='22')
+                                    svg.social__link_svg(width='100%' height='100%')
                                         use(xlink:href=`images/icons/sprite.svg#${social[0]}`)
             .hero__menu.hamburger
                 a.hamburger__link
