--- a/src/template/pages/about.pug
+++ b/src/template/pages/about.pug
@@ -41,6 +41,9 @@ block content
         //        svg.arrow-down__svg(width='26' height='17')
         //            use(xlink:href=`images/icons/sprite.svg#arrow_down`)
     section.about
+        .hero__substrate
+            svg.hero__substrate_svg(width='100%' height='100%' preserveAspectRatio="none")
+                use(xlink:href=`images/icons/sprite.svg#bg`)
         .about__left
             .about__inner
                 .triangle.about__triangle-left
