--- a/src/styles/section/footer.scss
+++ b/src/styles/section/footer.scss
@@ -4,6 +4,11 @@
   flex:1 1 auto;
   color: #ffffff;
   padding: rem(25px) 0;
+
+  @include tablets {
+    display: block;
+    padding:rem(25px) rem(20px);
+  }
 }
 
 .footer__col {
@@ -15,13 +20,34 @@
   &:last-child {
     border-right: none;
   }
+  @include tablets {
+    border-right: none;
+  }
 }
 
 .footer__col--left {
   flex: 2;
+  @include tablets {
+    text-align: center;
+    padding-bottom: rem(20px);
+    border-bottom: 1px solid #4e5563;
+    margin-bottom: rem(15px);
+  }
 }
 .footer__col--center {
   flex: 2;
+  @include tablets {
+    width: 50%;
+    float: left;
+  }
+  @include phones {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding-bottom: rem(10px);
+    border-bottom: 1px solid #4e5563;
+    margin-bottom: rem(15px);
+  }
 }
 
 .footer__row {
@@ -52,6 +78,16 @@
 
 .footer__col--right {
   flex: 1;
+
+  @include tablets {
+    width:50%;
+    text-align: right;
+  }
+
+  @include phones {
+    width: 100%;
+    text-align: center;
+  }
 }
 
 .footer-contact__link {
@@ -59,6 +95,7 @@
   @include font-size(16px);
   font-family: Roboto;
   font-weight: 100;
+  line-height: 2;
 }
 
 .footer__bottom {
