--- a/src/template/pages/blog.pug
+++ b/src/template/pages/blog.pug
@@ -85,7 +85,7 @@ block content
                             each social in socials
                                 li.social__item
                                     a(class=`social__link social__link_${social[0]}` href=`${social[1]}`)
-                                        svg.social__link_svg(width='22' height='22')
+                                        svg.social__link_svg(width='100%' height='100%')
                                             use(xlink:href=`images/icons/sprite.svg#${social[0]}`)
             .footer__col.footer__col--right
                 ul.footer-contact
