--- a/src/styles/section/index.scss
+++ b/src/styles/section/index.scss
@@ -1,14 +1,33 @@
+.fullscreen-bg__video {
+  position: absolute;
+  top: -1%;
+  left: -1%;
+  right: -1%;
+  bottom: -1%;
+  width: auto;
+  z-index: -100;
+  @include tablets {
+    display: none;
+  }
+}
+
 .paralax__container {
-  background-image: url(../images/bg/main_bg.jpg);
+  background-image: url(../images/bg/mountain_bg.png);
   background-repeat: no-repeat;
   background-size: cover;
   position: absolute;
-  top: 0;
   left: 0;
   right: 0;
   bottom: 0;
+  height:40%;
+  width:100%;
   overflow: hidden;
   z-index: 0;
+  @include tablets {
+    background-image: url(../images/bg/main_bg.jpg);
+    top: 0;
+    height: 100%;
+  }
 }
 
 .login-btn {
@@ -16,6 +35,10 @@
   top: 5%;
   right: 5%;
   z-index: 10;
+  display: none;
+  &.active {
+    display: block;
+  }
   @include phones {
     right:50%;
     transform: translateX(50%);
@@ -48,12 +71,13 @@
 }
 
 .flipper {
-  perspective: 1000;
+  perspective: 3000;
   width: rem(380px);
+  transform-style: preserve-3d;
 }
 
 .flip-block {
-  transition: 0.6s;
+  transition: 0.8s;
   transform-style: preserve-3d;
   position: relative;
   min-height: 420px;
@@ -70,14 +94,24 @@
   position: absolute;
   top: 0;
   left: 0;
+  transition: 0.8s;
+  transform-style: preserve-3d;
 }
 
 .flip-block__front{
   z-index:2;
+  transform: rotateY(0deg);
+}
+
+.flip-block__back {
+  transform: rotateY(-180deg);
 }
 
 .flip {
-  .flip-block {
+  .flip-block__back {
+    transform: rotateY(0deg);
+  }
+  .flip-block__front {
     transform: rotateY(180deg);
   }
 }
