--- a/src/styles/section/index.scss
+++ b/src/styles/section/index.scss
@@ -4,7 +4,7 @@
   left: -1%;
   right: -1%;
   bottom: -1%;
-  width: auto;
+  width: 102%;
   z-index: -100;
   @include tablets {
     display: none;
