--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -5,7 +5,7 @@ block variables
 
 block content
     .wrapper
-        video.fullscreen-bg__video(loop muted autoplay poster="images/bg/main_bg.jpg")
+        video.fullscreen-bg__video(loop muted autoplay poster="")
             source(src="video/night.mp4" type="video/mp4")
         .paralax__container
         .login-btn.active
