create hamburger-menu and sidebar on page 'Blog'

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,3 +18,4 @@ $phones: 480px;
 @import "section/footer.scss";
 @import "section/blog.scss";
 @import "section/work.scss";
+@import "section/hamburger.scss";
