--- a/src/styles/section/blog.scss
+++ b/src/styles/section/blog.scss
@@ -42,15 +42,17 @@
     position: absolute;
     right:100%;
     background-color: #253468;
-    &.active {
+    transition: right .3s;
+    &.active_a {
       right:21%;
+      transition: right .3s;
     }
   }
 
 }
 
 .blog-nav__item {
-  &.active {
+  &.active_a {
     .blog-nav__link {
       color: #004cd1;
       border-right: 2px solid #004cd1;
@@ -77,14 +79,16 @@
   }
 }
 
-.blog-left__circle {
-  height:100px;
-  width:100px;
-  border-radius: 50%;
-  background-color: #253468;
-  position: absolute;
-  top:20%;
-  left:72%;
+@include phones {
+  .blog-left__circle {
+    height:100px;
+    width:100px;
+    border-radius: 50%;
+    background-color: #253468;
+    position: absolute;
+    top:20%;
+    left:72%;
+  }
 }
 
 .blog-right {
