--- a/src/template/loyout.pug
+++ b/src/template/loyout.pug
@@ -12,4 +12,5 @@ html(lang='ru')
     body
         block content
 
+        include section/hamburger.pug
         script(type="text/javascript" src="js/main.js")
