--- a/src/template/pages/blog.pug
+++ b/src/template/pages/blog.pug
@@ -19,9 +19,6 @@ block content
                             a(class=`social__link social__link_${social[0]}` href=`${social[1]}`)
                                 svg.social__link_svg(width='100%' height='100%')
                                     use(xlink:href=`images/icons/sprite.svg#${social[0]}`)
-        .hero__menu.hamburger
-            a.hamburger__link
-                span.hamburger__link_item
         .hero_main
             //.section-title
                 img.section-title__img(src="images/bg/main_bg.jpg")
@@ -40,7 +37,7 @@ block content
         .blog-left.active
             .blog-left__circle
             ul.blog-nav
-                li.blog-nav__item.active
+                li.blog-nav__item.active_a
                     a.blog-nav__link(href="#") Самое важное в SASS
                 li.blog-nav__item
                     a.blog-nav__link(href="#") Приёмы в вёрстке, без которых не обходится ни один сайт
@@ -98,3 +95,5 @@ block content
                         a.footer-contact__link(href="tel:79811215823") +79811215823
                     li.footer-contact__item Санкт-Петербург
         .footer__bottom © Poymenov Konstantin | Создано с любовью в LoftSchool | 2018
+
+
