--- a/src/template/section/hamburger.pug
+++ b/src/template/section/hamburger.pug
@@ -5,10 +5,10 @@
     nav.hamburger-menu__nav
         ul.hamburger-menu__list
             li.hamburger-menu__item.hamburger-menu__item--active
-                a.hamburger-menu__link(href='#') Мои работы
+                a.hamburger-menu__link(href='work.html') Мои работы
             li.hamburger-menu__item
-                a.hamburger-menu__link(href='#') Блог
+                a.hamburger-menu__link(href='blog.html') Блог
             li.hamburger-menu__item
-                a.hamburger-menu__link(href='#') Обо мне
+                a.hamburger-menu__link(href='about.html') Обо мне
             li.hamburger-menu__item
-                a.hamburger-menu__link(href='#') Авторизация
+                a.hamburger-menu__link(href='index.html') Авторизация
