--- a/src/template/loyout.pug
+++ b/src/template/loyout.pug
@@ -10,7 +10,9 @@ html(lang='ru')
         title #{title}
         link(rel='stylesheet', href='styles/main.min.css')
     body
+        include section/preloader.pug
         block content
 
         include section/hamburger.pug
+        script(script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js")
         script(type="text/javascript" src="js/main.js")
