--- a/src/template/pages/about.pug
+++ b/src/template/pages/about.pug
@@ -29,10 +29,10 @@ block content
                 .hero-star
                     img.hero-star__img(src="images/bg/stars1.svg")
         .arrow.hero__scroll-button.arrow__down
-            a.arrow__link
+            a.arrow__link(href='#about')
                 svg.arrow__svg(width='26' height='17')
                     use(xlink:href=`images/icons/sprite.svg#arrow_down`)
-    section.about
+    section.about#about
         .hero__substrate
             svg.hero__substrate_svg(width='100%' height='100%' preserveAspectRatio="none")
                 use(xlink:href=`images/icons/sprite.svg#bg`)
@@ -73,16 +73,16 @@ block content
                                     ul.skills-row__list
                                         -
                                             var skills = [
-                                                ['HTML5','CSS3','Javascript&Jquery'],
-                                                ['PHP','mySQL','Node.js','MongoDB'],
-                                                ['Git','Gulp','Bower']
+                                            ['HTML5','CSS3','Javascript&Jquery'],
+                                            ['PHP','mySQL','Node.js','MongoDB'],
+                                            ['Git','Gulp','Bower']
                                             ]
                                         each item in skills
                                             li.skills-row__item
                                                 .skill
                                                     svg.skill__circle(viewBox="0 0 110 110")
                                                         circle( r="45" cx="50%" cy="50%" fill="none" class="circle__first")
-                                                        circle( r="45" cx="50%" cy="50%" transform="rotate(-90 55 55)" class="circle__second circle-25")
+                                                        circle( r="45" cx="50%" cy="50%" transform="rotate(-90 55 55)" class="circle__second circle-50")
                                                     .skill__title #{skills[0][1]}
     section.map
         .google-map
@@ -116,41 +116,41 @@ block content
                             .contacts-row__title
                                 a.contacts-row__link Санкт-Петербург
     footer.footer
-            .footer__top
-                .footer__col.footer__col--left
-                    p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool
+        .footer__top
+            .footer__col.footer__col--left
+                p Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool
 
-                .footer__col.footer__col--center
-                    .footer__row
-                        nav.menu
-                            ul.menu__list
-                                each item in ['Мои работы', 'Обо мне', 'Блог', 'Авторизация']
-                                    li.menu__item
-                                        a(href="").menu__link #{item}
-                    .footer__row
-                        .social
-                            -
-                                var socials = [
-                                ['vk','https://vk.com/id294245982'],
-                                ['github','https://github.com/kostyapoymenov'],
-                                ['in','https://ru.linkedin.com/']
-                                ]
+            .footer__col.footer__col--center
+                .footer__row
+                    nav.menu
+                        ul.menu__list
+                            each item in ['Мои работы', 'Обо мне', 'Блог', 'Авторизация']
+                                li.menu__item
+                                    a(href="").menu__link #{item}
+                .footer__row
+                    .social
+                        -
+                            var socials = [
+                            ['vk','https://vk.com/id294245982'],
+                            ['github','https://github.com/kostyapoymenov'],
+                            ['in','https://ru.linkedin.com/']
+                            ]
 
-                            ul.social__list
-                                each social in socials
-                                    li.social__item
-                                        a(class=`social__link social__link_${social[0]}` href=`${social[1]}`)
-                                            svg.social__link_svg(width='22' height='22')
-                                                use(xlink:href=`images/icons/sprite.svg#${social[0]}`)
-                .footer__col.footer__col--right
-                    ul.footer-contact
-                        li.footer-contact__item kostya807740
-                        li.footer-contact__item
-                            a.footer-contact__link(href="mailto:kostya6699@mail.ru") kostya6699@mail.ru
-                        li.footer-contact__item
-                            a.footer-contact__link(href="tel:79811215823") +79811215823
-                        li.footer-contact__item Санкт-Петербург
-            .footer__bottom © Poymenov Konstantin | Создано с любовью в LoftSchool | 2018
+                        ul.social__list
+                            each social in socials
+                                li.social__item
+                                    a(class=`social__link social__link_${social[0]}` href=`${social[1]}`)
+                                        svg.social__link_svg(width='22' height='22')
+                                            use(xlink:href=`images/icons/sprite.svg#${social[0]}`)
+            .footer__col.footer__col--right
+                ul.footer-contact
+                    li.footer-contact__item kostya807740
+                    li.footer-contact__item
+                        a.footer-contact__link(href="mailto:kostya6699@mail.ru") kostya6699@mail.ru
+                    li.footer-contact__item
+                        a.footer-contact__link(href="tel:79811215823") +79811215823
+                    li.footer-contact__item Санкт-Петербург
+        .footer__bottom © Poymenov Konstantin | Создано с любовью в LoftSchool | 2018
 
 
     //script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXLebC2DzSqTGGRbrrhMNhVphM5nxvKfY&callback=initMap" async defer)
